--- a/about-us.html
+++ b/about-us.html
@@ -32,10 +32,10 @@
           <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-list">
-                <a class="nav-link-zoe active" aria-current="page" href="index.html">Accueil</a>
+                <a class="nav-link-zoe" href="index.html">Accueil</a>
               </li>
               <li class="nav-list">
-                <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
+                <a class="nav-link-zoe active" aria-current="page" href="about-us.html">Qui sommes-nous</a>
               </li>
               <li class="nav-list">
                 <a class="nav-link-zoe" href="contact.html">Contact</a>
@@ -46,31 +46,6 @@
       </nav>
     </header>
     <!-- /Menu de navigation -->
-
-    <!-- Banniere -->
-    <div class="banniere">
-      <div class="content">
-        <div class="title">
-          Passez de moment bon moment avec <span class="title-zoe">ZOE</span>
-        </div>
-        <div class="reservation">
-          <a href="" class="reservation-link">Réserver maintenant</a>
-        </div>
-      </div>
-    </div>
-    <!-- /Banniere -->
-
-    <!-- Contenu -->
-    <div class="container main">
-      <div class="title">
-        Découvrez plus d'horizon avec <span >ZOE</span>
-      </div>
-      <div class="">
-        Profitez d'une vue unique sur la route et d'un voyage plein de passion rendant le voyage émouvant.
-      </div>
-      
-    </div>
-    <!-- /Contenu -->
 
     <!-- Footer -->
     <footer class="menu mt-4 px-3 pt-5 pb-3">
