--- a/contact.html
+++ b/contact.html
@@ -1,186 +1,196 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
-    <title>ZOE | Transport et logistique</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./vendors/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./vendors/font-awesome/css/all.min.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="shortcut icon" href="./img/fav-icon.png" type="image/x-icon">
+  <title>ZOE | Transport et logistique</title>
 </head>
+
 <body>
-    <div class="loader">
-        <img src="./img/loader.gif" alt="loader-gif">
-      </div>
+
+  <!-- Loader -->
+  <!-- <div class="loader">
+    <img src="./img/loader.gif" alt="loader-gif">
+  </div> -->
+  <!-- /Loader -->
+  <div class="main">
     <!-- Menu de navigation -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-green">
+    <header class="header">
+      <nav class="navbar navbar-expand-lg menu">
         <div class="container-fluid">
-            <div class="logo">
-                <img class="logo-zoe" src="./img/logo.png">
-            </div>
-            <button class="navbar-toggler nav-dob-link" type="button" data-bs-toggle="collapse"
-                data-bs-target="#toggleNavbar" aria-controls="toggleNavbar" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <i class="fa fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse justify-content-md-center" id="toggleNavbar">
-                <a class="link-green fs-5 me-5 d-flex my-3" href="index.html">Accueil</a>
-                <a class="link-green fs-5 me-5 d-flex my-3" href="nos_tarifs.html">Nos tarifs</a>
-                <a class="link-green fs-5 me-5 d-flex my-3" href="about.html">A propos</a>
-                <a class="link-green fs-5 d-flex my-3" href="contact.html">Contact</a>
-            </div>
+          <a class="nav-logo" href="index.html">ZOE TRANSPORT</a>
+          <button class="navbar-toggler btn-shop" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa-solid fa-bars"></span>
+          </button>
+          <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-list">
+                <a class="nav-link-zoe" href="index.html">Accueil</a>
+              </li>
+              <li class="nav-list">
+                <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
+              </li>
+              <li class="nav-list">
+                <a class="nav-link-zoe active" aria-current="page" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
+    </header>
     <!-- /Menu de navigation -->
-    <!-- breadcrumbs -->
-    <div class="container py-3">
-        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);"
-            aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html" class="link-green">Accueil</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Contact</li>
-            </ol>
-        </nav>
-    </div>
-    <!-- ./breadcrumbs -->
+
     <!-- Contact -->
-    <div class="container">
-        <div>
-            <div class="text-start text-color-green title-dec">
-                Contact
+    <div class="container my-5">
+      <div class="row">
+        <div class="col-md-9 col-sm-12">
+          <div class="contact">
+            <div class="title">
+              Nous contacter
             </div>
-            <div class="description-decouverte">
-                Contactez nous dans nos differentes agences
+            <div class="description">
+              Vous pouvez nous contacter par téléphone, ou e-mail. Pour poser une question spécifique via
+              internet, veuillez utiliser le formulaire.
             </div>
+            <div class="form-contact">
+              <form action="" class="row">
+                <div class="col-md-6 col-sm-12">
+                  <div class="form-group">
+                    <label for="fullname">Nom complet</label>
+                    <input type="text" name="fullname" id="fullname" placeholder="Nom complet">
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" placeholder="Email">
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                  <div class="form-group">
+                    <label for="phone">Téléphone</label>
+                    <input type="tel" name="phone" id="phone" placeholder="Téléphone">
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-12">
+                  <div class="form-group">
+                    <label for="city">Ville</label>
+                    <input type="text" name="city" id="city" placeholder="Ville">
+                  </div>
+                </div>
+                <div class="col-md-12 col-sm-12">
+                  <div class="form-group">
+                    <label for="msg">Message</label>
+                    <textarea name="msg" id="msg" cols="30" rows="10"
+                      placeholder="Veuillez saisir votre message"></textarea>
+                  </div>
+                </div>
+                <div class="col-md-12 col-sm-12">
+                  <div class="form-group-check">
+                    <input type="checkbox" name="newsletter" id="newsletter">
+                    <label for="newsletter">Je m’abonne à la NewsLetter ZOE T & L</label>
+                  </div>
+                </div>
+                <div class="col-md-12 col-sm-12">
+                  <div class="form-submit">
+                    <button>Envoyer message</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
-        <div class="row mt-5">
-            <div class="col-md-12 mb-4">
-                <div class="title title-dec text-center">
-                    Brazzaville
-                </div>
-                <div class="row bg-green p-2">
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div class="col-md-3 col-sm-12">
+          <div class="address mt-4">
+            <div class="min-title">
+              ZOE T & L Pointe-Noire
             </div>
-            <div class="col-md-12 mb-4">
-                <div class="title title-dec text-center">
-                    Pointe-Noire
-                </div>
-                <div class="row bg-green p-2">
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="min-desc">
+              <p><span class="fa-solid fa-phone"></span> 0278932372</p>
+              <p><span class="fa-solid fa-envelope"></span> contact@zoe.com</p>
             </div>
-            <div class="col-md-12 mb-4">
-                <div class="title title-dec text-center">
-                    Dolisie
-                </div>
-                <div class="row bg-green p-2">
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="agence">
-                            <div class="agence-title">
-                                AGENCE
-                            </div>
-                            <div class="agence-contact text-center">
-                                <p>Adresse : <span class="text-color-green"> Rue de france</span> </p>
-                                <p>Numéro : <span class="text-color-green"> 06 606 00 00</span> </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          </div>
+          <div class="address mt-4">
+            <div class="min-title">
+              ZOE T & L Brazzaville
             </div>
+            <div class="min-desc">
+              <p><span class="fa-solid fa-phone"></span> 0278932372</p>
+              <p><span class="fa-solid fa-envelope"></span> contact@zoe.com</p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <!-- /Contact -->
-    <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
-    <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/main.js"></script>
+
+    <!-- Footer -->
+    <footer class="menu mt-4 px-3 pt-5 pb-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6 col-lg-4">
+            <div class="footer-title">
+              Qui sommes-nous ?
+            </div>
+            <div class="footer-description">
+              ZOE T & L est agence de voyage basé sur le Transport routier.
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="footer-title">
+              ZOE T & L
+            </div>
+            <div class="footer-description">
+              <ul class="navbar-nav">
+                <li class="footer-list">
+                  <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
+                </li>
+                <li class="footer-list">
+                  <a class="footer-link" href="about-us.html">Qui sommes-nous</a>
+                </li>
+                <li class="footer-list">
+                  <a class="footer-link" href="contact.html">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-12 col-lg-5">
+            <div class="footer-title">
+              Newsletter
+            </div>
+            <div class="footer-description">
+              Abonnez-vous a notre newsletter pour être informer de nos nouveautés.
+            </div>
+            <div class="footer-form">
+              <form action="">
+                <div class="form-group">
+                  <label for="mail">Email</label>
+                  <input type="email" name="mail" id="mail" placeholder="Veuillez saisir votre email">
+                </div>
+                <div class="footer-submit">
+                  <button type="submit">Souscrire !</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>&copy; Copyrights, ZOE T & L. Tous droits réservés.</p>
+      </div>
+    </footer>
+    <!-- /Footer -->
+  </div>
+  <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
+  <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
