--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <img src="./img/loader.gif" alt="loader-gif">
   </div> -->
   <!-- /Loader -->
-  <div class="main">
+  <main>
     <!-- Menu de navigation -->
     <header class="header">
       <nav class="navbar navbar-expand-lg menu">
@@ -60,17 +60,172 @@
     </div>
     <!-- /Banniere -->
 
-    <!-- Contenu -->
+    <!-- grille tarifaire-->
     <div class="container main">
-      <div class="title">
-        Découvrez plus d'horizon avec <span >ZOE</span>
+      <div class="description">
+        Voici notre grille tarifaire
       </div>
-      <div class="">
-        Profitez d'une vue unique sur la route et d'un voyage plein de passion rendant le voyage émouvant.
+      <div class="price">
+        <!-- Formulaire -->
+        <div class="form">
+          <div class="choice-title my-3 text-center">Sélectionnez votre ville de départ</div>
+          <form action="">
+            <div class="form-group">
+              <select name="city" id="city">
+                <option value="">--- Sélectionnez une ville ---</option>
+                <optgroup label="Zone Sud">
+                  <option value="">Pointe-Noire</option>
+                </optgroup>
+                <optgroup label="Zone Nord">
+                  <option value="">Brazzaville</option>
+                </optgroup>
+              </select>
+            </div>
+            <div class="form-submit">
+              <button type="submit">Soumettre</button>
+            </div>
+          </form>
+        </div>
+        <!-- /Formulaire -->
+        <!-- Grille tarifaire -->
+        <div class="grid-price">
+          <div class="title-price">
+            Destinations disponibles
+          </div>
+          <div class="row">
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_1.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_2.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_3.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_4.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_1.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_2.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_3.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_4.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_1.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_2.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_3.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+            <!-- prix pour la destination -->
+            <div class="col-md-3 col-sm-12">
+              <div class="city-dest">
+                <img src="./img/paysage/paysage_4.jpg" alt="">
+                <h4>Destination ville</h4>
+                <h5>Prix: <span>15 000</span> Xaf</h5>
+              </div>
+            </div>
+            <!-- /prix pour la destination -->
+          </div>
+        </div>
+        <!-- /Grille tarifaire -->
       </div>
-      
     </div>
-    <!-- /Contenu -->
+    <!-- /grille tarifaire -->
+
+    <!-- Modal details voyage -->
+    <div class="modal fade" id="detailsVoyage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Modal details voyage -->
 
     <!-- Footer -->
     <footer class="menu mt-4 px-3 pt-5 pb-3">
@@ -128,7 +283,7 @@
       </div>
     </footer>
     <!-- /Footer -->
-  </div>
+  </main>
   <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
   <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="./js/main.js"></script>
