--- a/index.html
+++ b/index.html
@@ -30,17 +30,36 @@
             <span class="fa-solid fa-bars"></span>
           </button>
           <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-list">
-                <a class="nav-link-zoe active" aria-current="page" href="index.html">Accueil</a>
-              </li>
-              <li class="nav-list">
-                <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
-              </li>
-              <li class="nav-list">
-                <a class="nav-link-zoe" href="contact.html">Contact</a>
-              </li>
-            </ul>
+            <div class="row w-75">
+              <div class="col-md-8">
+                <ul class="navbar-nav">
+                  <li class="nav-list">
+                    <a class="nav-link-zoe active" aria-current="page" href="index.html">Accueil</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="nav-link-zoe" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-4">
+                <ul class="navbar-nav">
+                  <li class="nav-list">
+                    <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
+                      data-bs-target="#login">Connexion</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="nav-link-zoe" href="javascript:void(0);" data-bs-toggle="modal"
+                      data-bs-target="#register">S'inscrire</a>
+                  </li>
+                  <!-- <li class="nav-list">
+                    <a class="nav-link-zoe" href="#">Tableau de bord</a>
+                  </li> -->
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -54,7 +73,8 @@
           Passez de moment bon moment avec <span class="title-zoe">ZOE</span>
         </div>
         <div class="reservation">
-          <a href="" class="reservation-link">Réserver maintenant</a>
+          <a href="javascript:void(0);" class="reservation-link" data-bs-toggle="modal"
+            data-bs-target="#register">Réserver maintenant</a>
         </div>
       </div>
     </div>
@@ -94,7 +114,7 @@
           </div>
           <div class="row">
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
                 <img src="./img/paysage/paysage_1.jpg" alt="">
                 <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
@@ -103,100 +123,82 @@
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
                 <img src="./img/paysage/paysage_2.jpg" alt="">
-                <h4>Destination ville</h4>
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
                 <img src="./img/paysage/paysage_3.jpg" alt="">
-                <h4>Destination ville</h4>
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
                 <img src="./img/paysage/paysage_4.jpg" alt="">
-                <h4>Destination ville</h4>
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
-                <img src="./img/paysage/paysage_1.jpg" alt="">
-                <h4>Destination ville</h4>
+                <img src="./img/paysage/paysage_5.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
-                <img src="./img/paysage/paysage_2.jpg" alt="">
-                <h4>Destination ville</h4>
+                <img src="./img/paysage/paysage_6.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
-                <img src="./img/paysage/paysage_3.jpg" alt="">
-                <h4>Destination ville</h4>
+                <img src="./img/paysage/paysage_7.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
-                <img src="./img/paysage/paysage_4.jpg" alt="">
-                <h4>Destination ville</h4>
+                <img src="./img/paysage/paysage_8.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
-                <img src="./img/paysage/paysage_1.jpg" alt="">
-                <h4>Destination ville</h4>
+                <img src="./img/paysage/paysage_9.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
             <!-- /prix pour la destination -->
             <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-6 col-lg-4 col-sm-12">
               <div class="city-dest">
-                <img src="./img/paysage/paysage_2.jpg" alt="">
-                <h4>Destination ville</h4>
-                <h5>Prix: <span>15 000</span> Xaf</h5>
-              </div>
-            </div>
-            <!-- /prix pour la destination -->
-            <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
-              <div class="city-dest">
-                <img src="./img/paysage/paysage_3.jpg" alt="">
-                <h4>Destination ville</h4>
-                <h5>Prix: <span>15 000</span> Xaf</h5>
-              </div>
-            </div>
-            <!-- /prix pour la destination -->
-            <!-- prix pour la destination -->
-            <div class="col-md-3 col-sm-12">
-              <div class="city-dest">
-                <img src="./img/paysage/paysage_4.jpg" alt="">
-                <h4>Destination ville</h4>
+                <img src="./img/paysage/paysage_10.jpg" alt="">
+                <h4><a href="" data-bs-toggle="modal" data-bs-target="#detailsVoyage">Destination ville</a></h4>
                 <h5>Prix: <span>15 000</span> Xaf</h5>
               </div>
             </div>
@@ -209,23 +211,127 @@
     <!-- /grille tarifaire -->
 
     <!-- Modal details voyage -->
-    <div class="modal fade" id="detailsVoyage" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+    <div class="modal fade" id="detailsVoyage" tabindex="-1" aria-labelledby="detailsVoyageModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            ...
+          <div class="modal-body details-voyage">
+            <div class="row">
+              <div class="col-md-5 col-sm-12">
+                <img src="./img/paysage/paysage_1.jpg" alt="">
+              </div>
+              <div class="col-md-7 col-sm-12">
+                <h5><span>Trajet</span> : Pointe-Noire - Brazzaville</h5>
+                <h5><span>Prix</span> : 15 000 XAF</h5>
+                <h5><span>Départ</span> : Tous les jours</h5>
+                <h5><span>Gare de départ</span> :</h5>
+                <ul>
+                  <li>Ngoyo</li>
+                  <li>Tie-Tie</li>
+                  <li>O.C.H</li>
+                  <li>Siafoumou</li>
+                </ul>
+                <h5><span>Gare d'arrivée</span> :</h5>
+                <ul>
+                  <li>Plateau</li>
+                  <li>Mfilou</li>
+                  <li>Mikalou</li>
+                  <li>Ouenze</li>
+                </ul>
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
           </div>
         </div>
       </div>
     </div>
     <!-- /Modal details voyage -->
+
+    <!-- Modal Login -->
+    <div class="modal fade" id="login" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">S'identifier</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="login">
+              <form action="">
+                <div class="form-group">
+                  <label for="fullname">Nom d'utilisateur</label>
+                  <input type="text" name="fullname" id="fullname" placeholder="Nom d'utilisateur">
+                </div>
+                <div class="form-group">
+                  <label for="fullname">Mot de passe</label>
+                  <input type="password" name="fullname" id="fullname" placeholder="Mot de passe">
+                </div>
+                <div class="forgot">
+                  <a href="">Mot de passe oublié ?</a>
+                </div>
+                <div class="form-submit">
+                  <button>Se connecter <i class="fa-solid fa-right-to-bracket"></i></button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Modal Login -->
+
+    <!-- Modal Register -->
+    <div class="modal fade" id="register" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">S'enregister</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div class="login">
+              <form action="">
+                
+                <div class="form-group">
+                  <label for="lastname">Nom</label>
+                  <input type="text" name="lastname" id="lastname" placeholder="Nom">
+                </div>
+                <div class="form-group">
+                  <label for="firstname">Prénom</label>
+                  <input type="text" name="firstname" id="firstname" placeholder="Prénom">
+                </div>
+                <div class="form-group">
+                  <label for="firstname">Email</label>
+                  <input type="email" name="email" id="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                  <label for="pwd">Mot de passe</label>
+                  <input type="password" name="pwd" id="pwd" placeholder="Mot de passe">
+                </div>
+                <div class="form-group">
+                  <label for="conf-pwd">Confirmez mot de passe</label>
+                  <input type="password" name="conf-pwd" id="conf-pwd" placeholder="Mot de passe">
+                </div>
+                <div class="form-group-check">
+                  <input type="checkbox" name="user-cond" id="user-cond">
+                  <label for="user-cond">J'accepte <a href="javascrip:void(0);">les conditions d'utilisation</a></label>
+                </div>
+                <div class="form-submit">
+                  <button>Se connecter <i class="fa-solid fa-right-to-bracket"></i></button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /Modal Register -->
+
+    <!-- Modal Reserved -->
+
+    <!-- /Modal Reserved -->
 
     <!-- Footer -->
     <footer class="menu mt-4 px-3 pt-5 pb-3">
