--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <div class="modal-body">
             <div class="login">
               <form action="">
-                
+
                 <div class="form-group">
                   <label for="lastname">Nom</label>
                   <input type="text" name="lastname" id="lastname" placeholder="Nom">
@@ -319,7 +319,7 @@
                   <label for="user-cond">J'accepte <a href="javascrip:void(0);">les conditions d'utilisation</a></label>
                 </div>
                 <div class="form-submit">
-                  <button>Se connecter <i class="fa-solid fa-right-to-bracket"></i></button>
+                  <button>S'inscire</button>
                 </div>
               </form>
             </div>
@@ -345,7 +345,7 @@
               ZOE T & L est agence de voyage basé sur le Transport routier.
             </div>
           </div>
-          <div class="col-sm-12 col-md-6 col-lg-3">
+          <div class="col-sm-12 col-md-6 col-lg-4">
             <div class="footer-title">
               ZOE T & L
             </div>
@@ -363,23 +363,22 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-12 col-md-12 col-lg-5">
+          <div class="col-sm-12 col-md-12 col-lg-4">
             <div class="footer-title">
-              Newsletter
+              Nos zone de servies
             </div>
             <div class="footer-description">
-              Abonnez-vous a notre newsletter pour être informer de nos nouveautés.
-            </div>
-            <div class="footer-form">
-              <form action="">
-                <div class="form-group">
-                  <label for="mail">Email</label>
-                  <input type="email" name="mail" id="mail" placeholder="Veuillez saisir votre email">
-                </div>
-                <div class="footer-submit">
-                  <button type="submit">Souscrire !</button>
-                </div>
-              </form>
+              <ul class="navbar-nav">
+                <li class="footer-list">
+                  Pointe-Noire
+                </li>
+                <li class="footer-list">
+                  Brazzaville
+                </li>
+                <li class="footer-list">
+                  Ouesso
+                </li>
+              </ul>
             </div>
           </div>
         </div>
